appId: com.visweshmekala.officeorbit
env:
  TEST_EMAIL: ${TEST_EMAIL}
  TEST_PASSWORD: ${TEST_PASSWORD}
---
- launchApp
- tapOn:
    text: "Sign In"
    optional: true
- tapOn:
    id: "signin-email-input"
- inputText: ${TEST_EMAIL}
- tapOn:
    id: "signin-password-input"
- inputText: ${TEST_PASSWORD}
- tapOn:
    id: "signin-submit-button"
- assertVisible: "Slide to Check.*"
